# gcp-data-platform

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
dags/: investing_dag.py
dags/dbt/: Dockerfile  dbt_project.yaml  profile.yml  requirements.txt  schema.yaml
dags/dbt/models/: raw_bloomberg_commodity_index.sql  raw_chinese_caixin_services_index.sql  raw_usd_to_cny.sql
dags/include/: constants.py  utils.py
docs/: test.md
infra/:  vpn.tf  dns.tf  gcr.tf  gcs.tf  gke.tf  provider.tf  var.tf  vars.tf  vpc.tf
infra/k8s/charts/airflow/: pv-airflow.yaml  values.yaml
infra/k8s/charts/apache_ranger/: values.yaml
infra/k8s/charts/apache_ranger/config/: install.properties
infra/k8s/charts/grafana/: values.yaml
infra/k8s/charts/opensearch/: values.yaml
infra/k8s/charts/prometheus/: values.yaml
infra/k8s/charts/trino/: values.yaml
infra/k8s/istio_alb/: gateway.yaml  virtual_services.yaml
infra/k8s/templates/: pvc.yaml
tests/: test_invest_dag.py
